tests/baselines/reference/jsdocPrivateName1.errors.txt
tests/cases/conformance/jsdoc/jsdocPrivateName1.js(3,5): error TS2322: Type 'number' is not assignable to type 'boolean'.


==== tests/cases/conformance/jsdoc/jsdocPrivateName1.js (1 errors) ====
    class A {
        /** @type {boolean} some number value */
        #foo = 3 // Error because not assignable to boolean
        ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    }
    